--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,14 @@ h2 {
     margin-bottom: 32px;
 }
 
+h3 {
+    font-family: Montserrat, sans-serif;
+    color:#1A1B1F;
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 32px;
+}
+
 
 
 .front .text {
