--- a/styles.css
+++ b/styles.css
@@ -17,70 +17,11 @@
 }
 body{
     background-color: #FFFFFF;
-}
-
-.navbar .name{
-    
-    font-size: 24px;
-    color: #1A1B1F;
-    
-}
-
-.navbar a {
-    float: left;
-    font-size: 16px;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    color: #1A1B1F;
-}
-  
-.dropdown {
-    overflow: hidden;
-
-}
-
-.dropdown .dropdownbtn {
     font-family: Roboto, 'sans-serif';
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: #1A1B1F;
-    padding: 14px 16px;
-    background-color: white;
-    
+
 }
 
-.navbar a:hover, .dropdown:hover .dropdownbtn {
-    color: blue;
-}
 
-.dropdown-content {
-    display: none;
-    background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    position:fixed
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    float: left;
-    color: #1A1B1F;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 
 
 .front h1 {
@@ -129,9 +70,13 @@ h3 {
     margin-top: 128px;
     display: grid;
     align-items: top; 
-    grid-template-columns: 1fr 1fr;
     column-gap: 5px;
+
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 }
+
+
+
 
 img {
     object-fit: cover;
@@ -175,8 +120,7 @@ img {
     margin-top: 128px;
     display: grid;
     align-items: top; 
-    grid-template-columns: 2fr 1fr;
-    column-gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));    column-gap: 5px;
 }
 
 th {
@@ -212,4 +156,213 @@ table {
     align-content: center;
 
   }
+  * {
+    box-sizing: border-box;
+  }
+  
+.toggle,
+[id^=drop] {
+	display: none;
+}
 
+/* Giving a background-color to the nav container. */
+nav { 
+	margin:0;
+	padding: 0;
+	background-color: #254441;
+}
+
+.name {
+	display: block;
+	padding: 0 30px;
+	float: left;
+	font-size: 24px;
+	line-height: 60px;
+}
+
+/* Since we'll have the "ul li" "float:left"
+ * we need to add a clear after the container. */
+
+nav:after {
+	content:"";
+	display:table;
+	clear:both;
+}
+
+/* Removing padding, margin and "list-style" from the "ul",
+ * and adding "position:reltive" */
+nav ul {
+	float: right;
+	padding:0;
+	margin:0;
+	list-style: none;
+	position: relative;
+	}
+	
+/* Positioning the navigation items inline */
+nav ul li {
+	margin: 0px;
+	display:inline-block;
+	float: left;
+	background-color: #254441;
+	}
+
+/* Styling the links */
+nav a {
+	display:block;
+	padding:14px 20px;	
+	color:#FFF;
+	font-size:17px;
+	text-decoration:none;
+}
+
+
+nav ul li ul li:hover { background: #000000; }
+
+/* Background color change on Hover */
+nav a:hover { 
+	background-color: #000000; 
+}
+
+/* Hide Dropdowns by Default
+ * and giving it a position of absolute */
+nav ul ul {
+	display: none;
+	position: absolute; 
+	/* has to be the same number as the "line-height" of "nav a" */
+	top: 60px; 
+}
+	
+/* Display Dropdowns on Hover */
+nav ul li:hover > ul {
+	display:inherit;
+}
+	
+/* Fisrt Tier Dropdown */
+nav ul ul li {
+	width:170px;
+	float:none;
+	display:list-item;
+	position: relative;
+}
+
+/* Second, Third and more Tiers	
+ * We move the 2nd and 3rd etc tier dropdowns to the left
+ * by the amount of the width of the first tier.
+*/
+nav ul ul ul li {
+	position: relative;
+	top:-60px;
+	/* has to be the same number as the "width" of "nav ul ul li" */ 
+	left:170px; 
+}
+
+	
+
+
+
+/* Media Queries
+--------------------------------------------- */
+
+@media all and (max-width : 768px) {
+
+	.name {
+		display: block;
+		padding: 0;
+		width: 100%;
+		text-align: center;
+		float: none;
+        font-size: 24px;
+	}
+
+	nav {
+		margin: 0;
+	}
+
+
+	.toggle + a,
+	.menu {
+		display: none;
+	}
+
+	.toggle {
+		display: block;
+		background-color: #254441;
+		padding:14px 20px;	
+		color:#FFF;
+		font-size:17px;
+		text-decoration:none;
+		border:none;
+	}
+
+	.toggle:hover {
+		background-color: #000000;
+	}
+
+	[id^=drop]:checked + ul {
+		display: block;
+	}
+
+	nav ul li {
+		display: block;
+		width: 100%;
+		}
+
+	nav ul ul .toggle,
+	nav ul ul a {
+		padding: 0 40px;
+	}
+
+	nav ul ul ul a {
+		padding: 0 80px;
+	}
+
+	nav a:hover,
+ 	nav ul ul ul a {
+		background-color: #000000;
+	}
+  
+	nav ul li ul li .toggle,
+	nav ul ul a,
+  nav ul ul ul a{
+		padding:14px 20px;	
+		color:#FFF;
+		font-size:17px; 
+	}
+  
+  
+	nav ul li ul li .toggle,
+	nav ul ul a {
+		background-color: #212121; 
+	}
+
+	nav ul ul {
+		float: none;
+		position:static;
+		color: #ffffff;
+	}
+		
+	nav ul ul li:hover > ul,
+	nav ul li:hover > ul {
+		display: none;
+	}
+		
+	nav ul ul li {
+		display: block;
+		width: 100%;
+	}
+
+	nav ul ul ul li {
+		position: static;
+	}
+
+}
+
+@media all and (max-width : 330px) {
+
+	nav ul li {
+		display:block;
+		width: 94%;
+	}
+
+}
