--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,6 @@
-
-.navbar {
-    overflow: hidden;
-    font-family: Roboto, 'sans-serif';
-    position: relative;
-    margin-left: 32px;    
-    margin-right: 32px;  
-    margin-top: 32px;  
-
-}
-
-.navbar-right {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    
-}
 body{
     background-color: #FFFFFF;
     font-family: Roboto, 'sans-serif';
-
 }
 
 
@@ -165,7 +147,6 @@ table {
 	display: none;
 }
 
-/* Giving a background-color to the nav container. */
 nav { 
 	margin:0;
 	padding: 0;
@@ -180,8 +161,7 @@ nav {
 	line-height: 60px;
 }
 
-/* Since we'll have the "ul li" "float:left"
- * we need to add a clear after the container. */
+
 
 nav:after {
 	content:"";
@@ -189,8 +169,6 @@ nav:after {
 	clear:both;
 }
 
-/* Removing padding, margin and "list-style" from the "ul",
- * and adding "position:reltive" */
 nav ul {
 	float: right;
 	padding:0;
@@ -199,7 +177,6 @@ nav ul {
 	position: relative;
 	}
 	
-/* Positioning the navigation items inline */
 nav ul li {
 	margin: 0px;
 	display:inline-block;
@@ -207,7 +184,6 @@ nav ul li {
 	background-color: #254441;
 	}
 
-/* Styling the links */
 nav a {
 	display:block;
 	padding:14px 20px;	
@@ -219,26 +195,20 @@ nav a {
 
 nav ul li ul li:hover { background: #000000; }
 
-/* Background color change on Hover */
 nav a:hover { 
 	background-color: #000000; 
 }
 
-/* Hide Dropdowns by Default
- * and giving it a position of absolute */
 nav ul ul {
 	display: none;
 	position: absolute; 
-	/* has to be the same number as the "line-height" of "nav a" */
 	top: 60px; 
 }
 	
-/* Display Dropdowns on Hover */
 nav ul li:hover > ul {
 	display:inherit;
 }
 	
-/* Fisrt Tier Dropdown */
 nav ul ul li {
 	width:170px;
 	float:none;
@@ -246,14 +216,10 @@ nav ul ul li {
 	position: relative;
 }
 
-/* Second, Third and more Tiers	
- * We move the 2nd and 3rd etc tier dropdowns to the left
- * by the amount of the width of the first tier.
-*/
+
 nav ul ul ul li {
 	position: relative;
 	top:-60px;
-	/* has to be the same number as the "width" of "nav ul ul li" */ 
 	left:170px; 
 }
 
@@ -261,8 +227,6 @@ nav ul ul ul li {
 
 
 
-/* Media Queries
---------------------------------------------- */
 
 @media all and (max-width : 768px) {
 
@@ -303,9 +267,15 @@ nav ul ul ul li {
 		display: block;
 	}
 
+    nav ul {
+        float: left;
+
+    }
+
 	nav ul li {
 		display: block;
 		width: 100%;
+
 		}
 
 	nav ul ul .toggle,
